data/errors/%40teamhive%2Fcapacitor-webview-overlay-capacitor-android-4.txt
✖ Running Gradle build - failed!
[error] 
        > Configure project :app
        WARNING:Using flatDir should be avoided because it doesn't support any meta-data formats.
        
        > Configure project :capacitor-cordova-android-plugins
        WARNING:Using flatDir should be avoided because it doesn't support any meta-data formats.
        
        > Task :app:preBuild UP-TO-DATE
        > Task :app:preReleaseBuild UP-TO-DATE
        > Task :capacitor-android:preBuild UP-TO-DATE
        > Task :capacitor-android:preReleaseBuild UP-TO-DATE
        > Task :capacitor-android:packageReleaseRenderscript NO-SOURCE
        > Task :capacitor-app:preBuild UP-TO-DATE
        > Task :capacitor-app:preReleaseBuild UP-TO-DATE
        > Task :capacitor-app:packageReleaseRenderscript NO-SOURCE
        > Task :capacitor-cordova-android-plugins:preBuild UP-TO-DATE
        > Task :capacitor-cordova-android-plugins:preReleaseBuild UP-TO-DATE
        > Task :capacitor-cordova-android-plugins:packageReleaseRenderscript NO-SOURCE
        > Task :capacitor-haptics:preBuild UP-TO-DATE
        > Task :capacitor-haptics:preReleaseBuild UP-TO-DATE
        > Task :capacitor-haptics:packageReleaseRenderscript NO-SOURCE
        > Task :capacitor-keyboard:preBuild UP-TO-DATE
        > Task :capacitor-keyboard:preReleaseBuild UP-TO-DATE
        > Task :capacitor-keyboard:packageReleaseRenderscript NO-SOURCE
        > Task :capacitor-status-bar:preBuild UP-TO-DATE
        > Task :capacitor-status-bar:preReleaseBuild UP-TO-DATE
        > Task :capacitor-status-bar:packageReleaseRenderscript NO-SOURCE
        > Task :teamhive-capacitor-webview-overlay:preBuild UP-TO-DATE
        > Task :teamhive-capacitor-webview-overlay:preReleaseBuild UP-TO-DATE
        > Task :teamhive-capacitor-webview-overlay:packageReleaseRenderscript NO-SOURCE
        > Task :app:compileReleaseRenderscript NO-SOURCE
        > Task :app:generateReleaseResValues
        > Task :app:generateReleaseResources
        > Task :capacitor-android:compileReleaseRenderscript NO-SOURCE
        > Task :capacitor-android:generateReleaseResValues
        > Task :capacitor-android:generateReleaseResources
        > Task :capacitor-android:packageReleaseResources
        > Task :capacitor-app:compileReleaseRenderscript NO-SOURCE
        > Task :capacitor-app:generateReleaseResValues
        > Task :capacitor-app:generateReleaseResources
        > Task :capacitor-app:packageReleaseResources
        > Task :capacitor-cordova-android-plugins:compileReleaseRenderscript NO-SOURCE
        > Task :capacitor-cordova-android-plugins:generateReleaseResValues
        > Task :capacitor-cordova-android-plugins:generateReleaseResources
        > Task :capacitor-cordova-android-plugins:packageReleaseResources
        > Task :capacitor-haptics:compileReleaseRenderscript NO-SOURCE
        > Task :capacitor-haptics:generateReleaseResValues
        > Task :capacitor-haptics:generateReleaseResources
        > Task :capacitor-haptics:packageReleaseResources
        > Task :capacitor-keyboard:compileReleaseRenderscript NO-SOURCE
        > Task :capacitor-keyboard:generateReleaseResValues
        > Task :capacitor-keyboard:generateReleaseResources
        > Task :capacitor-keyboard:packageReleaseResources
        > Task :capacitor-status-bar:compileReleaseRenderscript NO-SOURCE
        > Task :capacitor-status-bar:generateReleaseResValues
        > Task :capacitor-status-bar:generateReleaseResources
        > Task :capacitor-status-bar:packageReleaseResources
        > Task :teamhive-capacitor-webview-overlay:compileReleaseRenderscript NO-SOURCE
        > Task :teamhive-capacitor-webview-overlay:generateReleaseResValues
        > Task :teamhive-capacitor-webview-overlay:generateReleaseResources
        > Task :teamhive-capacitor-webview-overlay:packageReleaseResources
        > Task :app:createReleaseCompatibleScreenManifests
        > Task :app:extractDeepLinksRelease
        > Task :capacitor-android:extractDeepLinksRelease
        > Task :capacitor-app:extractDeepLinksRelease
        > Task :capacitor-app:processReleaseManifest
        > Task :capacitor-cordova-android-plugins:extractDeepLinksRelease
        > Task :capacitor-haptics:extractDeepLinksRelease
        > Task :capacitor-haptics:processReleaseManifest
        > Task :capacitor-keyboard:extractDeepLinksRelease
        > Task :capacitor-status-bar:extractDeepLinksRelease
        > Task :capacitor-status-bar:processReleaseManifest
        > Task :teamhive-capacitor-webview-overlay:extractDeepLinksRelease
        > Task :capacitor-android:processReleaseManifest
        > Task :capacitor-keyboard:processReleaseManifest
        > Task :teamhive-capacitor-webview-overlay:processReleaseManifest
        > Task :capacitor-cordova-android-plugins:processReleaseManifest
        > Task :capacitor-status-bar:compileReleaseLibraryResources
        > Task :capacitor-keyboard:compileReleaseLibraryResources
        > Task :capacitor-app:compileReleaseLibraryResources
        > Task :capacitor-android:compileReleaseLibraryResources
        > Task :capacitor-cordova-android-plugins:compileReleaseLibraryResources
        > Task :capacitor-haptics:compileReleaseLibraryResources
        > Task :app:mergeReleaseResources
        > Task :app:processReleaseMainManifest
        > Task :app:mapReleaseSourceSetPaths
        > Task :app:processReleaseManifest
        > Task :app:processApplicationManifestReleaseForBundle
        > Task :capacitor-android:compileReleaseAidl NO-SOURCE
        > Task :capacitor-android:generateReleaseBuildConfig
        > Task :capacitor-app:compileReleaseAidl NO-SOURCE
        > Task :capacitor-android:javaPreCompileRelease
        > Task :capacitor-app:generateReleaseBuildConfig
        > Task :capacitor-android:parseReleaseLocalResources
        > Task :capacitor-app:parseReleaseLocalResources
        > Task :teamhive-capacitor-webview-overlay:compileReleaseLibraryResources
        > Task :capacitor-android:generateReleaseRFile
        > Task :app:bundleReleaseResources
        
        > Task :capacitor-android:compileReleaseJavaWithJavac
        Note: Some input files use unchecked or unsafe operations.
        Note: Recompile with -Xlint:unchecked for details.
        
        > Task :capacitor-android:bundleLibRuntimeToJarRelease
        > Task :capacitor-android:bundleLibCompileToJarRelease
        > Task :capacitor-app:javaPreCompileRelease
        > Task :capacitor-haptics:compileReleaseAidl NO-SOURCE
        > Task :capacitor-haptics:generateReleaseBuildConfig
        > Task :capacitor-haptics:javaPreCompileRelease
        > Task :capacitor-haptics:parseReleaseLocalResources
        > Task :capacitor-app:generateReleaseRFile
        > Task :capacitor-keyboard:compileReleaseAidl NO-SOURCE
        > Task :capacitor-haptics:generateReleaseRFile
        > Task :capacitor-app:compileReleaseJavaWithJavac
        > Task :capacitor-app:bundleLibRuntimeToJarRelease
        > Task :capacitor-keyboard:generateReleaseBuildConfig
        > Task :capacitor-keyboard:parseReleaseLocalResources
        > Task :capacitor-haptics:compileReleaseJavaWithJavac
        > Task :capacitor-haptics:bundleLibRuntimeToJarRelease
        > Task :capacitor-keyboard:javaPreCompileRelease
        > Task :capacitor-status-bar:compileReleaseAidl NO-SOURCE
        > Task :capacitor-status-bar:generateReleaseBuildConfig
        > Task :capacitor-keyboard:generateReleaseRFile
        > Task :capacitor-status-bar:parseReleaseLocalResources
        > Task :capacitor-status-bar:javaPreCompileRelease
        > Task :teamhive-capacitor-webview-overlay:compileReleaseAidl NO-SOURCE
        > Task :teamhive-capacitor-webview-overlay:generateReleaseBuildConfig
        > Task :teamhive-capacitor-webview-overlay:javaPreCompileRelease
        > Task :teamhive-capacitor-webview-overlay:parseReleaseLocalResources
        > Task :capacitor-cordova-android-plugins:compileReleaseAidl NO-SOURCE
        > Task :capacitor-status-bar:generateReleaseRFile
        > Task :teamhive-capacitor-webview-overlay:generateReleaseRFile
        > Task :capacitor-keyboard:compileReleaseJavaWithJavac
        > Task :capacitor-keyboard:bundleLibRuntimeToJarRelease
        > Task :capacitor-status-bar:compileReleaseJavaWithJavac
        > Task :capacitor-status-bar:bundleLibRuntimeToJarRelease
        
        > Task :teamhive-capacitor-webview-overlay:compileReleaseJavaWithJavac FAILED
        /Users/damian/Sample Code/plugin-explorer/apps/capacitor-4/node_modules/@teamhive/capacitor-webview-overlay/android/src/main/java/com/teamhive/capacitor/webviewoverlay/WebviewOverlayPlugin.java:286: error: ';' expected
        webView.destroy()
        ^
        1 error
        
        Deprecated Gradle features were used in this build, making it incompatible with Gradle 8.0.
        
        You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.
        
        See https://docs.gradle.org/7.4.2/userguide/command_line_interface.html#sec:command_line_warnings
        80 actionable tasks: 80 executed
        
        FAILURE: Build failed with an exception.
        
        * What went wrong:
        Execution failed for task ':teamhive-capacitor-webview-overlay:compileReleaseJavaWithJavac'.
        > Compilation failed; see the compiler error output for details.
        
        * Try:
        > Run with --stacktrace option to get the stack trace.
        > Run with --info or --debug option to get more log output.
        > Run with --scan to get full insights.
        
        * Get more help at https://help.gradle.org
        
        BUILD FAILED in 2s
        
